# Heis_2020_GO

Elevator_project/: README.md  main.go
Elevator_project/elevator/: README.md  elevator.go
Elevator_project/elevator-server/: Cargo.toml
Elevator_project/elevator-server/src/: channel.rs
Elevator_project/elevio/: elevator_io.go
Elevator_project/network/: README.md  network.go
Elevator_project/orderDistributer/: README.md  orderDistributer.go
Elevator_project/orderDistributer-helpfunc/: orderDistributer-helpfunc.go
Elevator_project/orderHandler/: README.md  orderhandler.go
Elevator_project/orderHandler-helpfunc/: orderHandler-helpfunc.go
Elevator_project/stateMachine/: README.md  stateMachine.go
Elevator_project/stateMachine-helpfunc/: stateMachine-helpfunc.go
Elevator_project/timer/: timer.go
Heis_Go/: Progresjon  README.md  main.go  temp.go
Heis_Go/StateMachine-go/: stateMachieneFunc.go  stateMachine.go
Heis_Go/control-go/: control.go  orderhandler.go
Heis_Go/driver-go/: main.go
Heis_Go/elevator/: README.md  ReadMe.md  elevator.go
Heis_Go/elevator-server/: README.md
Heis_Go/elevio/: elevator_io.go
Heis_Go/messageHandler/: messageHandler.go
Heis_Go/network/: README.md  network.go
Heis_Go/orderDistributer/: README.md  orderDistributer.go
Heis_Go/orderDistributer-helpfunc/: orderDistributer-helpfunc.go
Heis_Go/orderHandler/: README.md  orderhandler.go
Heis_Go/orderHandler-helpfunc/: orderHandler-helpfunc.go
Heis_Go/stateMachine-go/: stateMachine.go
Heis_Go/stateMachine-helpfunc/: stateMachine-helpfunc.go
(+4 files in other folders)
