[package]
name = "ttk4145_elevator_server"
version = "0.1.3"
authors = ["Kjetil Kjeka"]
repository = "https://github.com/TTK4145/elevator-server"

description = "TCP based API for the elevator hardware at NTNU RealTime lab"

keywords = ["TTK4145", "elevator"]
categories = ["hardware-support"]

license = "Unlicense"


[[bin]]
path = "src/main.rs"
name = "ElevatorServer"

[dependencies]
libc = "0.2.34"

[dev-dependencies]
lazy_static = "1.0"
rand = "0.4"
